--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -11,13 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-
-      - name: Docker Login
-        uses: docker/login-action@v3.3.0
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
         with:
-            registry: punitkashyup
-            username: ${{ secrets.REGISTRY_USERNAME }}
-            password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - run: |
           docker build -f ./backend/Dockerfile -t punitkashyup/task-manager-be:${{ github.run_number }} .
