Refactor Docker build commands in GitHub workflows to change directory before building for backend and frontend

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -19,7 +19,8 @@ jobs:
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - run: |
-          docker build -f ./backend/Dockerfile -t punitkashyup/task-manager-be:${{ github.run_number }} .
+          cd backend
+          docker build -t punitkashyup/task-manager-be:${{ github.run_number }} .
           docker push punitkashyup/task-manager-be:${{ github.run_number }}
   deploy:
     needs: build
