--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -44,4 +44,4 @@ jobs:
           action: deploy
           namespace: "todo"
           manifests: |
-            ./backend/deployment.yml
+            ./backend/deployment/deployment.yml
