--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: richardrigutins/replace-in-files@v1
         with:
-          files: "./frontend/deployment.yml"
+          files: "./frontend/deployment/deployment.yml"
           search-text: "_BUILD__ID_"
           replacement-text: "${{ github.run_number }}"
 
