Update ingress configurations for frontend and backend services

--- a/infra/deployment-scripts-manifest/deployment-manifest/be-ingress.yml
+++ b/infra/deployment-scripts-manifest/deployment-manifest/be-ingress.yml
@@ -16,8 +16,8 @@ spec:
     - host: todo-api.tdwebsites.in
       http:
         paths:
-          - path: /(.*)
-            pathType: Prefix
+          - path: "/(.*)"
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: todo-backend
