--- a/infra/deployment-scripts-manifest/deployment-manifest/fe-ingress.yml
+++ b/infra/deployment-scripts-manifest/deployment-manifest/fe-ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: todo-backend
+  name: todo-frontend
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/rewrite-target: /$1
@@ -10,16 +10,16 @@ spec:
   tls:
     - hosts:
         - todo-app.tdwebsites.in
-      secretName: todo-backend
+      secretName: todo-frontend
   ingressClassName: nginx
   rules:
     - host: todo-app.tdwebsites.in
       http:
         paths:
-          - path: /(.*)
-            pathType: Prefix
+          - path: "/(.*)"
+            pathType: ImplementationSpecific
             backend:
               service:
-                name: todo-backend
+                name: todo-frontend
                 port:
                   number: 80
